# hkc_visualization_tile_inception

./: .gitignore  LICENSE  README.md  pyproject.toml  run_all.sh
benchmarks/: README.md  bench_grid_adam.py
src/hkc_visualization_tile_inception/: __init__.py
src/hkc_visualization_tile_inception/cli/: hkc_tile.py
src/hkc_visualization_tile_inception/engine/: __init__.py  overlap_add.py  spectral_tile_field.py  validate_recon.py
src/hkc_visualization_tile_inception/io/: __init__.py  manifest.py  tile_file_io.py
src/hkc_visualization_tile_inception/optim/: __init__.py  baseline.py
src/hkc_visualization_tile_inception/viz/: __init__.py  error_heatmap.py  quicklook.py
tests/: test_lossy_improves_with_keep_frac.py  test_manifest_schema.py  test_overlap_add.py  test_replay_determinism.py  test_tile_io.py
tools/: generate_tiles.py  plot_benchmark_figures.py  run_benchmark_figures.sh
